Fixed bot img alignment on team list page

--- a/front-end/sentimentbot/src/Components/teamlist/teamlist.css
+++ b/front-end/sentimentbot/src/Components/teamlist/teamlist.css
@@ -28,8 +28,10 @@
 }
 
 .mainTeam-container .eh-moodbot {
-    position: relative;
-    width: 93%;
+    /* position: relative; */
+    /* width: 93%; */
+    display: flex;
+    flex-direction: row;
 }
 
 .mainTeam-container .eh-moodbot h3 {
@@ -39,16 +41,14 @@
 
 .mainTeam-container .eh-moodbot2 {
     position: absolute;
-    top: 5%;
-    left: 40%;
-    margin-left: 40%;
-    margin-top: -120px;
+    left: 67%;
+    margin-top: -9rem;
 }
 
 .mainTeam-container :nth-child(3) {
     /* width: 70%; */
+    margin-top: 3rem;
     margin-left: .3rem;
-    margin-bottom: 4rem;
     /* border: 2px solid #02C8A7; */
     width: 15rem;
     /* text-align: center;
@@ -147,7 +147,7 @@
         display: none;
     }
     .mainTeam-container h1 {
-        /* padding-right: 25rem; */
+        padding-right: 21rem;
         /* margin-right: 3.8rem; */
         /* width: 60%; */
         /* text-align: left; */
@@ -156,7 +156,7 @@
        /* margin-left: 9.5rem; */
        /* text-align: left; */
        text-align: center;
-       margin-left: 7rem;
+       /* margin-left: 11rem; */
     }
 }
 
@@ -177,10 +177,10 @@
         /* margin-right: 17rem; */
         text-align: left;
     }
-    .mainTeam-container :nth-child(3) {
+    /* .mainTeam-container :nth-child(3) {
         margin-bottom: 2rem;
         text-align: left;
-    }
+    } */
     .teamlist-container {
         height: 20rem;
     }
